fix: refine profile annotations and grid URLs